tests/fixtures/invalid/dict_div_bool.py
# Cannot divide Dict[str, int] and Bool
x: float = {"a": 1} / True
